--- a/client/src/components/HomePage/HomePage.css
+++ b/client/src/components/HomePage/HomePage.css
@@ -66,7 +66,7 @@
     align-items: center;
     margin-top: 100px;
     /* margin: 20px 0; */
-    margin-left: 15%;
+    /* margin-left: 15%; */
 
 }
 
@@ -83,7 +83,7 @@
     row-gap: 3.5vw;
     background-color: rgb(9, 9, 9);
     padding: 40px;
-    margin-left: 15%;
+    /* margin-left: 15%; */
 }
 
 .home-body-grid a{
