--- a/client/src/components/Authentication/LogIn.css
+++ b/client/src/components/Authentication/LogIn.css
@@ -70,7 +70,7 @@
     display: flex;
     justify-content: space-between; 
     margin: -15px 0 15px; 
-    color: rgb(65, 65, 65);
+    color: rgb(255, 255, 255);
 }
 .remember-forgot label input[type="checkbox"]{
     accent-color: #00BF62;
@@ -112,7 +112,7 @@
 
 .login-container .register-link a{
     text-decoration: none;
-    color:white;
+    color:#00BF62;
     font-weight: 550;
 }
 
@@ -126,3 +126,7 @@
     border-radius: 30px;
 }
 
+.error-message {
+    color: red;
+    font-weight: bold;
+}  
