--- a/client/src/components/Authentication/SignUp.css
+++ b/client/src/components/Authentication/SignUp.css
@@ -6,7 +6,6 @@
     justify-content: center;
     align-items: center;
     min-height: 80vh;
-    /* background: url(img08.jpg) no-repeat; */
     color: white;
     background-size: cover;
     background-position: center;
@@ -33,6 +32,11 @@
     width: 100%;
     height: 50px;
     margin: 40px 0px;
+    font-size: 16px;
+}
+
+.signup-form label{
+    margin-left: 20px;
 }
 
 .signup-form input{
