--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -23,7 +23,6 @@
 .profile-card-pic img{
     border-radius: 50%;
     max-height: 11rem;
-
 }
 
 .profile-card-info{
@@ -51,14 +50,15 @@
 }
 
 .profile-card-name{
-    font-size: 30px;
+    font-size: 24px;
     font-weight: 700;
+    /* width: 110%; */
 }
 
 .profile-card-username{
     color: rgb(165, 165, 165);
     /* color: red; */
-    font-size: 20px;
+    font-size: 15px;
 }
 
 .profile-card-popularity{
